fix overflow x

--- a/src/app/review/slider-card/slider-card.component.scss
+++ b/src/app/review/slider-card/slider-card.component.scss
@@ -1,17 +1,3 @@
-/*.text {
-  color: white;
-  font-family: Karla, sans-serif;
-  width: 100%;
-
-  !* Begrenzung der Höhe und Scrollen ermöglichen *!
-  max-height: 200px;
-!*  min-height: 200px;*!
-  overflow-y: auto;
-
-  !* Optional: Schriftgröße dynamisch anpassen *!
-  font-size: clamp(14px, 2vw, 18px);
-}*/
-
 .aut-line {
   color: white;
   font-family: Karla, sans-serif;
@@ -80,8 +66,6 @@ button {
 
 .card-slider-styling {
   overflow: hidden;
-  margin-left: -50px;
-  margin-right: -50px;
   display: flex;
   align-items: center;
   justify-content: center;
